--- a/frontend/src/app/company-list/company-list.component.scss
+++ b/frontend/src/app/company-list/company-list.component.scss
@@ -1,5 +1,5 @@
 .mat-mdc-row:hover .mat-mdc-cell {
-  background-color: #A09BE7;
+  background-color: #b9cdda;
 }
 .mat-mdc-row .mat-mdc-cell {
   border-bottom: 1px solid transparent;
