--- a/frontend/src/app/vacancies-list/vacancies-list.component.scss
+++ b/frontend/src/app/vacancies-list/vacancies-list.component.scss
@@ -7,3 +7,12 @@
   font-size: 14px;
   cursor: pointer;
 }
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  background-color: #b9cdda;
+}
+.mat-mdc-row .mat-mdc-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
