--- a/frontend/src/app/vacancies-view/vacancies-view.component.scss
+++ b/frontend/src/app/vacancies-view/vacancies-view.component.scss
@@ -6,3 +6,22 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.card-status {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 8px;
+  text-align: center;
+  background-color: #a6d8d4;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.button-new {
+  margin-top: 10px;
+  border: 1px solid black;
+  background-color: #a6d8d4;
+  color: black;
+  padding: 14px 28px;
+  font-size: 14px;
+  cursor: pointer;
+}
