--- a/frontend/src/app/internship-list/internship-list.component.html
+++ b/frontend/src/app/internship-list/internship-list.component.html
@@ -1,5 +1,5 @@
 <div style="margin: 35px">
-  <table mat-table class="mat-elevation-z8" [dataSource]="internships">
+  <table mat-table class="mat-elevation-z8" [dataSource]="paginatedInternships">
 
     <!-- Title Column -->
     <ng-container matColumnDef="title">
@@ -57,6 +57,11 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator [length]="length"
+                 [pageSize]="pageSize"
+                 [pageSizeOptions]="[5, 10, 50, 100]"
+                 (page)="handlePageEvent($event)"
+                 aria-label="Select page"></mat-paginator>
   <button class="button-new" mat-button routerLink="/internship-form" *ngIf="!this.userService.isLecturer()">New
     Internship
   </button>
