#13 calendar database update

--- a/frontend/src/app/calendar/calendar.component.html
+++ b/frontend/src/app/calendar/calendar.component.html
@@ -1,2 +1,5 @@
+<div id='calendar'>
+  <full-calendar  [options]="calendarOptions"></full-calendar>
+</div>
 
-<full-calendar [options]="calendarOptions"></full-calendar>
+
