create and update functionality

--- a/frontend/src/app/degree-program-list/degree-program-list.component.html
+++ b/frontend/src/app/degree-program-list/degree-program-list.component.html
@@ -38,19 +38,19 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="deadline_report1">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Class</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Report 1</th>
     <td mat-cell *matCellDef="let element">{{element.deadline_report1}}</td>
   </ng-container>
 
   <!-- Approval Status -->
   <ng-container matColumnDef="deadline_report2">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Class</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Report 2</th>
     <td mat-cell *matCellDef="let element">{{element.deadline_report2}}</td>
   </ng-container>
 
   <!-- Approval Status -->
   <ng-container matColumnDef="deadline_report3">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Class</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Report 3</th>
     <td mat-cell *matCellDef="let element">{{element.deadline_report3}}</td>
   </ng-container>
 
