--- a/frontend/src/app/internship-list/internship-list.component.html
+++ b/frontend/src/app/internship-list/internship-list.component.html
@@ -45,14 +45,13 @@
     </ng-container>
 
     <ng-container matColumnDef="update">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Edit Application Status</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button color="primary" [routerLink]="['/internship-form', element.pk]"
+        <button mat-button color="primary" (click)="openDialog(element.pk)"
                 *ngIf="!this.userService.isLecturer()">Edit Application Status
         </button>
       </td>
     </ng-container>
-
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
