dashboard changes and button visibility

--- a/frontend/src/app/company-view/company-view.component.html
+++ b/frontend/src/app/company-view/company-view.component.html
@@ -1,6 +1,6 @@
 <div style="margin: 35px">
   <div style="margin-bottom: 10px">
-    <a mat-raised-button [routerLink]="['/company-list']">Back</a>
+    <a mat-raised-button [routerLink]="['/dashboard']">Back</a>
   </div>
 
   <mat-card class="card-info">
