--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -36,10 +36,10 @@
   </ng-template>
 </div>
 
-<div class="second-row" *ngIf="userService.isLoggedIn$ | async">
-  <button mat-button class="custom-button" routerLink="internship-list">My Internships</button>
+<div class="second-row" *ngIf="this.userService.isLoggedIn$ | async">
+  <button *ngIf="!(this.userService.isLecturer())" mat-button class="custom-button" routerLink="internship-list">My Internships</button>
   <button mat-button class="custom-button" routerLink="degree-program-list">List Degree Programs</button>
-  <button mat-button class="custom-button" routerLink="internship-list">List Internships</button>
+  <button *ngIf="this.userService.isLecturer()" mat-button class="custom-button" routerLink="internship-list">List Internships</button>
   <button mat-button class="custom-button" routerLink="company-list">List Companies</button>
   <button mat-button class="custom-button" routerLink="vacancies-list">List Vacancies</button>
 </div>
