--- a/frontend/src/app/file-upload/file-upload.component.html
+++ b/frontend/src/app/file-upload/file-upload.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup">
+<form [formGroup]="formGroup" style="margin-top: 10px">
   <input type="file" name="fileInput" (change)="onChange($event)"/>
 </form>
-<button mat-raised-button color="primary" (click)="upload()">Upload</button>
+<button mat-raised-button color="primary" style="margin-top: 10px" (click)="upload()">Upload</button>
