--- a/frontend/src/app/dialog/dialog.component.html
+++ b/frontend/src/app/dialog/dialog.component.html
@@ -6,5 +6,5 @@
 <app-file-upload></app-file-upload>
 </div><hr/><br/>
 <div id='bereich'>
-<button mat-raised-button color="primary"  (click)="dialogRef.close()">Close</button>`
+<button mat-raised-button color="primary"  (click)="dialogRef.close()">Close</button>
 </div>
