--- a/frontend/src/app/internship-list/internship-list.component.html
+++ b/frontend/src/app/internship-list/internship-list.component.html
@@ -31,7 +31,7 @@
     <ng-container matColumnDef="approve">
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button color="primary" (click)="this.approve(element.pk)" *ngIf="this.userService.isLecturer()">
+        <button mat-button color="primary" (click)="this.approve(element.pk)" *ngIf="this.userService.isLecturer() && element.approval_status=='n'">
           Approve
         </button>
       </td>
@@ -39,7 +39,7 @@
     <ng-container matColumnDef="reject">
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button color="warn" (click)="this.reject(element.pk)" *ngIf="this.userService.isLecturer()">Reject
+        <button mat-button color="warn" (click)="this.reject(element.pk)" *ngIf="this.userService.isLecturer() && element.approval_status=='y'">Reject
         </button>
         <button mat-button color="primary" (click)="openDialog(element.pk)"
                 *ngIf="!this.userService.isLecturer()">Edit Application Status
