--- a/frontend/src/app/company-view/company-view.component.html
+++ b/frontend/src/app/company-view/company-view.component.html
@@ -13,6 +13,11 @@
           <img src="assets/images/logo_placeholder.png" width="50px"> {{company.name}}
         </ng-template>
       </h1>
+<!--      if the company is not in the database nothing is shown; therefore catch if the company is not in the database-->
+      <p *ngIf="companyFromDB.length > 0; else showTbd">Approval Status: {{this.companyDbService.mapApprovalStatusToFull(companyFromDB[0].approval_status)}}</p>
+      <ng-template #showTbd>
+        Approval Status: Awaiting approval
+      </ng-template>
       <p>{{company.description}}</p>
     </mat-card-content>
   </mat-card>
@@ -91,11 +96,16 @@
     </ng-template>
   </mat-expansion-panel>
 
-  <div style="margin-top: 10px">
-    <a mat-raised-button style="margin-right: 10px" [routerLink]="['/company-form/' + company.orb_num]">Edit</a>
-    <a mat-raised-button style="margin-right: 10px" color="primary" [routerLink]="['/company-list']">Approve</a>
-    <a mat-raised-button style="margin-right: 10px" color="warn" [routerLink]="['/company-list']">Deny</a>
-  </div>
+  <div *ngIf="this.userService.isLecturer(); then showLectButton; else showStudButton"></div>
+    <ng-template #showLectButton style="margin-top: 10px">
+      <a mat-raised-button style="margin-right: 10px; margin-top: 10px" color="primary" (click)="approve(company.orb_num)" [routerLink]="['/company-list']">Approve</a>
+      <a mat-raised-button style="margin-right: 10px; margin-top: 10px" color="warn" (click)="reject(company.orb_num)" [routerLink]="['/company-list']">Deny</a>
+      <a mat-raised-button style="margin-right: 10px; margin-top: 10px" [routerLink]="['/company-form/' + company.orb_num]">Edit</a>
+    </ng-template>
+  <ng-template #showStudButton>
+    <a mat-raised-button style="margin-right: 10px; margin-top: 10px" [routerLink]="['/company-form/' + company.orb_num]">Edit</a>
+  </ng-template>
+
 
 </div>
 
