--- a/frontend/src/app/degree-program-list/degree-program-list.component.html
+++ b/frontend/src/app/degree-program-list/degree-program-list.component.html
@@ -1,9 +1,10 @@
 <div style="margin: 35px">
-<table mat-table style="width: 100%" [dataSource]="degree_programs" matSort class="mat-elevation-z8">
+
+<table mat-table [dataSource]="degree_programs" class="mat-elevation-z8">
 
   <!-- Title Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+    <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
         {{element.name}}
@@ -23,7 +24,7 @@
 
   <!-- Application Status -->
   <ng-container matColumnDef="abbreviation">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Abbreviation</th>
+    <th mat-header-cell *matHeaderCellDef>Abbreviation</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.abbreviation}}
@@ -43,7 +44,7 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="current_class">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Class</th>
+    <th mat-header-cell *matHeaderCellDef>Class</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.current_class}}
@@ -63,7 +64,7 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="deadline_application">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Application Deadline</th>
+    <th mat-header-cell *matHeaderCellDef>Application Deadline</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.deadline_application}}
@@ -83,7 +84,7 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="internship_start">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Start of Internship</th>
+    <th mat-header-cell *matHeaderCellDef>Start of Internship</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.internship_start}}
@@ -103,7 +104,7 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="internship_end">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>End of Internship</th>
+    <th mat-header-cell *matHeaderCellDef>End of Internship</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.internship_end}}
@@ -123,7 +124,7 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="deadline_report1">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Report 1</th>
+    <th mat-header-cell *matHeaderCellDef>Report 1</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.deadline_report1}}
@@ -143,7 +144,7 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="deadline_report2">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Report 2</th>
+    <th mat-header-cell *matHeaderCellDef>Report 2</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.deadline_report2}}
@@ -163,7 +164,7 @@
 
   <!-- Approval Status -->
   <ng-container matColumnDef="deadline_report3">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Report 3</th>
+    <th mat-header-cell *matHeaderCellDef>Report 3</th>
     <td mat-cell *matCellDef="let element">
       <div *ngIf="editId !== element.pk">
       {{element.deadline_report3}}
@@ -182,14 +183,14 @@
   </ng-container>
 
   <ng-container matColumnDef="internships">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>To All Internships</th>
+    <th mat-header-cell *matHeaderCellDef>To All Internships</th>
     <td *matCellDef="let element">
       <button mat-button color="primary" [routerLink]="'/internship-list/' + element.abbreviation">To {{element.abbreviation}}</button>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+    <th mat-header-cell *matHeaderCellDef></th>
     <td *matCellDef="let element">
       <div *ngIf="editId === element.pk && editId !== 0">
         <button mat-button color="primary" (click)="this.cancel()" >cancel</button>
