--- a/frontend/src/app/company-form/company-form.component.html
+++ b/frontend/src/app/company-form/company-form.component.html
@@ -127,7 +127,7 @@
     <div style="margin-top: 10px">
       <a mat-raised-button style="margin-right: 10px" color="primary" [disabled]="!companyFormGroup.valid"
          (click)="createOrUpdateCompany()" [routerLink]="'/company-list'">Submit</a>
-      <a mat-raised-button style="margin-right: 10px" color="warn" [routerLink]="'/company-list'">Cacel</a>
+      <a mat-raised-button style="margin-right: 10px" color="warn" [routerLink]="['/company-list']">Cancel</a>
     </div>
 
   </div>
