--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -42,7 +42,7 @@
     </tr>
 
   </table>
-  <div>
+  <div *ngIf="!this.userService.isLoggedIn$">
     <a mat-raised-button class="button-new" [routerLink]="['/company-form']">Add Company</a>
   </div>
   <mat-paginator [length]="length"
