--- a/frontend/src/app/company-view/company-view.component.html
+++ b/frontend/src/app/company-view/company-view.component.html
@@ -95,17 +95,17 @@
       </div>
     </ng-template>
   </mat-expansion-panel>
-
-  <div *ngIf="this.userService.isLecturer(); then showLectButton; else showStudButton"></div>
+  <div *ngIf="userService.isLoggedIn$ | async; then loggedIn"></div>
+  <ng-template #loggedIn>
+    <div *ngIf="this.userService.isLecturer; then showLectButton; else showStudButton"></div>
     <ng-template #showLectButton style="margin-top: 10px">
       <a mat-raised-button style="margin-right: 10px; margin-top: 10px" color="primary" (click)="approve(company.orb_num)" [routerLink]="['/company-list']">Approve</a>
       <a mat-raised-button style="margin-right: 10px; margin-top: 10px" color="warn" (click)="reject(company.orb_num)" [routerLink]="['/company-list']">Deny</a>
       <a mat-raised-button style="margin-right: 10px; margin-top: 10px" [routerLink]="['/company-form/' + company.orb_num]">Edit</a>
     </ng-template>
-  <ng-template #showStudButton>
-    <a mat-raised-button style="margin-right: 10px; margin-top: 10px" [routerLink]="['/company-form/' + company.orb_num]">Edit</a>
+    <ng-template #showStudButton>
+      <a mat-raised-button style="margin-right: 10px; margin-top: 10px" [routerLink]="['/company-form/' + company.orb_num]">Edit</a>
+    </ng-template>
   </ng-template>
-
-
 </div>
 
