--- a/frontend/src/app/internship-list/internship-list.component.html
+++ b/frontend/src/app/internship-list/internship-list.component.html
@@ -55,9 +55,7 @@
                  [pageSizeOptions]="[5, 10, 50, 100]"
                  (page)="handlePageEvent($event)"
                  aria-label="Select page"></mat-paginator>
-  <button class="button-new" mat-button routerLink="/internship-form" *ngIf="!this.userService.isLecturer()">New
-    Internship
-  </button>
+  <button class="button-new" mat-button routerLink="/internship-form" *ngIf="!this.userService.isLecturer()">New Internship</button>
 </div>
 
 
