--- a/frontend/src/app/company-view/company-view.component.html
+++ b/frontend/src/app/company-view/company-view.component.html
@@ -97,7 +97,7 @@
   </mat-expansion-panel>
   <div *ngIf="userService.isLoggedIn$ | async; then loggedIn"></div>
   <ng-template #loggedIn>
-    <div *ngIf="this.userService.isLecturer; then showLectButton; else showStudButton"></div>
+    <div *ngIf="this.userService.isLecturer(); then showLectButton; else showStudButton"></div>
     <ng-template #showLectButton style="margin-top: 10px">
       <a mat-raised-button style="margin-right: 10px; margin-top: 10px" color="primary" (click)="approve(company.orb_num)" [routerLink]="['/company-list']">Approve</a>
       <a mat-raised-button style="margin-right: 10px; margin-top: 10px" color="warn" (click)="reject(company.orb_num)" [routerLink]="['/company-list']">Deny</a>
