--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -25,6 +25,10 @@ a {
   margin-top: 10px;
 }
 
+.custom-button-active {
+  background-color: #b9cdda;
+}
+
 .hello {
   font-size: 16px;
   text-align: center;
