--- a/frontend/src/app/dialog/dialog.component.html
+++ b/frontend/src/app/dialog/dialog.component.html
@@ -1,9 +1,9 @@
 <br/>
-<div id='bereich' style='margin-bottom: 20px;color:#F87060; font-weight:bold; font-size:20pt' >
-    Event: {{ data?.event }}
-</div><hr *ngIf="!this.userService.isLecturer()"/><br/>
-<div *ngIf="!this.userService.isLecturer()" id='bereich' style='margin-bottom: 20px'>
-  <app-file-upload></app-file-upload>
+<div id='bereich' style='margin-bottom: 20px;color:#F87060; font-size:16pt' >
+  {{ data?.event }}
+</div><hr/><br/>
+<div id='bereich' style='margin-bottom: 20px'>
+<app-file-upload [report_no]="report_no" [degree_program]="degree_program" [dialogRef]="dialogRef"></app-file-upload>
 </div><hr/><br/>
 <div id='bereich'>
   <button mat-raised-button color="primary"  (click)="dialogRef.close()">Close</button>
